version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/CPCommand.rst.txt
.. vale off



:class:`CPCommand`
==================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.CPCommand(iCPCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.ICPCommand)

   Bases: :py:obj:`object`


   
   Represents a CP command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CPCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Dof`
            - Gets the degree of freedom label.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Ncp`
            - Gets the number of coupled nodes.
          * - :py:attr:`~Nodes`
            - Gets the nodes.







Property detail
---------------
.. py:property:: Dof
   :type: Optional[str]


   
   Gets the degree of freedom label.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Ncp
   :type: Optional[int]


   
   Gets the number of coupled nodes.
















   ..
       !! processed by numpydoc !!

.. py:property:: Nodes
   :type: Optional[tuple[int]]


   
   Gets the nodes.
















   ..
       !! processed by numpydoc !!







.. vale on